--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/slider/
+    - assets/113x136/
+    - assets/categories/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
